temps-route.yml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2021-10-17T16:11:00Z"
    labels:
      app: temps
      app.kubernetes.io/component: temps
      app.kubernetes.io/instance: temps
      app.kubernetes.io/name: php
      app.kubernetes.io/part-of: temps
      app.openshift.io/runtime: php
      app.openshift.io/runtime-version: 7.3-ubi8
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.openshift.io/runtime: {}
            f:app.openshift.io/runtime-version: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: Mozilla
      operation: Update
      time: "2021-10-17T16:11:00Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      time: "2021-10-17T16:11:00Z"
    name: temps
    namespace: knxlbp-ocp
    resourceVersion: "2896986"
    selfLink: /apis/route.openshift.io/v1/namespaces/knxlbp-ocp/routes/temps
    uid: 103bfdc9-440e-4bc1-9b61-94ff31a609ce
  spec:
    host: temps-knxlbp-ocp.apps.na46.prod.nextcle.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: temps
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2021-10-17T16:11:00Z"
        status: "True"
        type: Admitted
      host: temps-knxlbp-ocp.apps.na46.prod.nextcle.com
      routerCanonicalHostname: apps.na46.prod.nextcle.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
